create index.html and style.css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta charset="utf-8">
         <title>test page README</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./style.css">
 
     </head>
 
     <body>
 
-        <h1>bienvenue sur la page test</h1>
+        <h1>bienvenue sur la page test git</h1>
 
     </body>
 
