--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <body>
 
         <h1>bienvenue sur la page test git</h1>
+        <section id="fig">
+            <div >
 
+            </div>
+        </section>
     </body>
 
 
